INT-1090: Upgrade gradle plugins (#49)
* Upgrade gradle plugins

* Update version