@@ -1,9 +1,8 @@
 plugins {
     `maven-publish`
-    id("com.projectronin.interop.gradle.integration")
+    id("com.projectronin.interop.gradle.docker-integration")
     id("com.projectronin.interop.gradle.junit")
-    id("com.projectronin.interop.gradle.spring")
-    id("org.springframework.boot")
+    id("com.projectronin.interop.gradle.spring-boot")
 }
 
 dependencies {
@@ -58,51 +57,4 @@ openApiGenerate {
             "gradleBuildFile" to "false"
         )
     )
-}
-
-publishing {
-    repositories {
-        maven {
-            name = "nexus"
-            credentials {
-                username = System.getenv("NEXUS_USER")
-                password = System.getenv("NEXUS_TOKEN")
-            }
-            url = if (project.version.toString().endsWith("SNAPSHOT")) {
-                uri("https://repo.devops.projectronin.io/repository/maven-snapshots/")
-            } else {
-                uri("https://repo.devops.projectronin.io/repository/maven-releases/")
-            }
-        }
-    }
-    publications {
-        create<MavenPublication>("bootJava") {
-            artifact(tasks.getByName("bootJar"))
-        }
-    }
-}
-
-var itSetup = tasks.create("itSetup") {
-    dependsOn(tasks.clean)
-    dependsOn(tasks.bootJar)
-
-    tasks.bootJar.get().mustRunAfter(tasks.clean)
-
-    doLast {
-        exec {
-            commandLine("docker compose build --no-cache".split(" "))
-        }
-    }
-}
-
-tasks.it.get().dependsOn(itSetup)
-
-// We should set at least the Logging in the junit plugin.
-tasks.withType(Test::class) {
-    testLogging {
-        events("passed", "skipped", "failed", "standardOut", "standardError")
-        exceptionFormat = org.gradle.api.tasks.testing.logging.TestExceptionFormat.FULL
-    }
-
-    jvmArgs("--add-opens=java.base/java.util=ALL-UNNAMED")
 }
